<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">Showfa Driver</string>
    <string name="helpLineNumber" tools:ignore="MissingTranslation">254796000666</string>
    <string name="hint_email" tools:ignore="Mis
    singTranslation">Email</string>
    <string name="hint_password" tools:ignore="MissingTranslation">Password</string>
    <string name="hint_phonenum">Mobile Number</string>
    <string name="hint_flight_number">Flight Number</string>
    <string name="isRunning">Running...</string>
    <string name="tap_to_open">Tap to open app</string>
    <string name="hint_note">Notes</string>
    <string name="hint_conform_pass">Confirm Password</string>
    <string name="hint_title" tools:ignore="MissingTranslation">Title</string>
    <string name="hint_fisrtname">First Name</string>
    <string name="hint_fullname">Full Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_name">Name</string>
    <string name="hint_referal_code">Invite Code</string>
    <string name="app_currency">%1$s</string>
    <string name="msg_sb_car_not_available">Unfortunately, Showfa currently unavailable in your area.</string>
    <string name="gps_is_settings">GPS settings</string>
    <string name="gps_is_settings_message">“Your GPS is not enabled. Please enable it in your phone’s settings menu</string>
    <string name="message_high_accuracy">Location sharing disabled. Tap here to enable.</string>
    <string name="settings">Settings</string>
    <string name="openDrawer" tools:ignore="MissingTranslation">open_drawer</string>
    <string name="closeDrawer" tools:ignore="MissingTranslation">close_drawer</string>
    <string name="title_my_booking">My Trips</string>
    <string name="new_gps_settings_message">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="new_gps_settings_positive_button">Settings</string>
    <string name="new_gps_settings_nagative_button">Cancel</string>
    <string name="permission_denied_for_location">Location sharing disabled. Tap here to enable.</string>
    <string name="cancel_request">Cancel request</string>
    <string name="request_cancelled">Request cancelled</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_to_cancel_request">Are you sure!! you want to cancel the trip?</string>
    <string name="please_select_payment_method">Please select your payment method.</string>
    <string name="need_camera_permission">Permission is required to access the camera.</string>
    <string name="this_app_need_camera_permission">Permission is required to access the camera.</string>
    <string name="this_app_need_camera_permission_please_allow">camera permission please allow from setting</string>
    <string name="grant">Grant</string>
    <string name="cancle">Cancel</string>
    <string name="storage_permission">Permission to access storage</string>
    <string name="this_app_need_storage_permission">Permission is required to access phone storage</string>
    <string name="default_notification_channel_id">All Notifications</string>
    <string name="balance">Balance</string>
    <string name="transfer">Transfer</string>
    <string name="ttl_cards">Add Card</string>
    <string name="available_funds">Available Funds</string>
    <string name="top_up">Top Up</string>
    <string name="transfer_to_bank">Transfer</string>
    <string name="ttl_transfer_to_bank">Transfer To Bank</string>
    <string name="transfer_to_bank_account">Transfer To Bank Account</string>
    <string name="history">History</string>
    <string name="upcoming">Coming Soon</string>
    <string name="send_money">Send Money</string>
    <string name="receive_money">Receive Money</string>
    <string name="set_amount">Set Amount</string>
    <string name="amount">Amount</string>
    <string name="add_a_card">Add a Card</string>
    <string name="ok">ok</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="card_number">Card Number</string>
    <string name="valid_through">Expiry Date</string>
    <string name="cvv" translatable="false">CVV</string>
    <string name="add_payment_error_message">Please ensure you have entered your payment detail correctly.</string>
    <string name="card_is_not_valid">Card is not valid.</string>
    <string name="invalid_card_number">Invalid card number.</string>
    <string name="txt_dflt_time" tools:ignore="MissingTranslation">0 min</string>
    <string name="lbl_dflt_time" tools:ignore="MissingTranslation">Avail\u0020</string>
    <string name="txt_min" tools:ignore="MissingTranslation">\u0020min</string>
    <string name="have_promo_code"><u>Have a promo code?</u></string>
    <string name="txt_promo_applied">%1$s Applied</string>
    <string name="msg_ok">OK</string>
    <string name="msg_error">Error Message</string>
    <string name="msg_empty_mobile">Please enter phone number</string>
    <string name="msg_invalid_mobile">Please enter a valid phone number</string>
    <string name="msg_empty_email">Please enter email</string>
    <string name="msg_invalid_email">Please enter a valid email</string>
    <string name="msg_empty_password">Please enter password</string>
    <string name="msg_invalid_password">Password must contain at least 8 characters</string>
    <string name="msg_empty_confirm_password">Please enter confirm password</string>
    <string name="msg_mismatch_password">Password and confirm password must be same</string>
    <string name="msg_try_later">Please try again later</string>
    <string name="msg_network_error">Please check your internet connection</string>
    <string name="msg_network_error_title">No internet connection</string>
    <string name="msg_empty_otp">Please enter the OTP</string>
    <string name="msg_invalid_otp">Please enter the correct OTP</string>
    <string name="msg_invalid_image">Please select profile image</string>
    <string name="msg_empty_name">Please enter first name</string>
    <string name="msg_empty_dob">Please select date of birth</string>
    <string name="msg_empty_address">Please enter address</string>
    <string name="msg_trip_complete">Please first complete your trip</string>
    <string name="msg_empty_new_password">Please enter new password</string>
    <string name="msg_trip_completed">Trip Completed!</string>
    <string name="msg_total_bill_is">Total Bill is KES</string>
    <string name="cancel_message_one">Dear Customer.\n</string>
    <string name="cancel_message_two">To Keep Our Drivers Motivated.\n</string>
    <string name="cancel_message_three">Please Note That Cancelling a Trip 3 Mins After Booking Attracts A Fee of</string>
    <string name="ksh">KES</string>
    <string name="cancel_message_four">Payable To The Driver. Please Confirm Whether You Still Wish To Cancel?</string>
    <string name="lbl_next">Next</string>
    <string name="tf_Regular" tools:ignore="MissingTranslation">fonts/proxima-nova-586c8e081cb01.otf</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_don_t_have_an_account">Don\'t have any account?</string>
    <string name="lbl_or_option" tools:ignore="MissingTranslation">OR</string>
    <string name="hnt_enter_otp">Enter OTP</string>
    <string name="txt_verify">Verify</string>
    <string name="txt_resend_otp"><u>Resend</u></string>
    <string name="txt_image">Image</string>
    <string name="txt_date_of_birth">Date Of Birth</string>
    <string name="hnt_post_code">Post Code</string>
    <string name="txt_submit">Submit</string>
    <string name="msg_success_msg">Successful</string>
    <string name="ttl_home">Home</string>
    <string name="txt_taxi_standard" tools:ignore="MissingTranslation">Standard</string>
    <string name="txt_taxi_premium" tools:ignore="MissingTranslation">Premium</string>
    <string name="txt_taxi_van" tools:ignore="MissingTranslation">Van</string>
    <string name="ttl_legal">Legal</string>
    <string name="ttl_driver_rating">Driver Rating</string>
    <string name="ttl_support">Support</string>
    <string name="ttl_select_payment_method">Select Payment Method</string>
    <string name="txt_cash">Cash</string>
    <string name="lbl_booking_fee">Booking Fee:</string>
    <string name="lbl_trip_fare">Trip Fare:</string>
    <string name="lbl_pickup_time">Pickup Time:</string>
    <string name="lbl_pickup_time2">Pickup Time</string>
    <string name="lbl_dropoff_time">Dropoff Time:</string>
    <string name="lbl_vehicle_type">Vehicle Type:</string>
    <string name="type">Type</string>
    <string name="lbl_distance_travelled">Distance Travelled:</string>
    <string name="lbl_distance_fare">Distance Fare:</string>
    <string name="lbl_tax">Tax</string>
    <string name="lbl_discount">Promo Credit Used:</string>
    <string name="lbl_payment_type">Payment Type:</string>
    <string name="lbl_total">Total Paid to Driver :</string>
    <string name="trip_status">Trip Status:</string>
    <string name="img_description">Image</string>
    <string name="lbl_cards">Cards</string>
    <string name="lbl_card">Pesapal</string>
    <string name="lbl_card2">Card :</string>
    <string name="lbl_transfer">Transfer</string>
    <string name="lbl_balance">Balance</string>
    <string name="font_regular" translatable="false">fonts/proxima-nova-586c8e081cb01.otf</string>
    <string name="font_bold" translatable="false">fonts/proxima-nova-bold-586c8dd29c851.otf</string>
    <string name="font_josefinsans_regular" translatable="false">fonts/josefinsans_regular.ttf</string>
    <string name="hnt_zero_dollar" translatable="false">&#160;&#160;&#160;&#160;&#160;TZS0.00&#160;&#160;&#160;&#160;&#160;</string>
    <string name="lbl_current_balance">Current Balance</string>
    <string name="txt_send_money">Send Money</string>
    <string name="lbl_invite_friend_descr">When a friend rides with your code.</string>
    <string name="txt_share_receipt">Share Receipt</string>
    <string name="txt_account">Account</string>
    <string name="txt_edit_profile">Edit Profile</string>
    <string name="ttl_profile">Profile</string>
    <string name="txt_gender">Gender</string>
    <string name="txt_change_password">Change Password</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_female">Female</string>
    <string name="lbl_save">Save</string>
    <string name="hnt_confirm_password">Confirm Password</string>
    <string name="hnt_new_password">New Password</string>
    <string name="ttl_my_booking">My Trips</string>
    <string name="ttl_payment">Payment</string>
    <string name="ttl_wallet">Wallet</string>
    <string name="ttl_my_receipts">My Receipts</string>
    <string name="ttl_invite_friends">Invite Friends</string>
    <string name="ttl_my_ratings">My Ratings</string>
    <string name="lbl_comment"><u>Comment</u></string>
    <string name="lbl_car_model">Car Model:</string>
    <string name="lbl_notes_optional">Notes (Optional)</string>
    <string name="lbl_flight_number_if_applicable">Flight Number (If applicable)</string>
    <string name="lbl_select_payment_method">Select Payment Method</string>
    <string name="your_wallet_balance">Your Wallet Balance</string>
    <string name="no_history_found">No history found.</string>
    <string name="saving_wallet_percentage">Saving wallet percentage</string>
    <string name="change_ul"><u>Change</u></string>
    <string name="view_more"><u>View more</u></string>
    <string name="more_information_about">About saving wallet.</string>
    <string name="activate_your_wallet">Activate your wallet</string>
    <string name="title_add_money">Add Money</string>
    <string name="title_send_money">Send Money</string>
    <string name="withdraw">withdraw</string>
    <string name="_89_00">$89.00</string>
    <string name="info_message">Info message!!</string>
</resources>