<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_30dp"
    android:background="@drawable/radius_popup"
    android:layout_margin="@dimen/_20dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="@dimen/_10dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/info_message"
        android:textAlignment="center"
        android:textColor="@color/theme_color"
        android:textSize="@dimen/_25sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:clickable="true"
        android:focusable="true"
        android:text="Show Alert dialog"
        android:textAlignment="center"
        android:textColor="@color/theme_color"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />


    <TextView
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@drawable/t_back_square_btn_orange"
        android:fontFamily="@font/montserrat_bold"
        android:paddingHorizontal="@dimen/_40dp"
        android:paddingTop="@dimen/_10dp"
        android:paddingBottom="@dimen/_10dp"
        android:text="@string/ok"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_18sp"
        app:layout_constraintEnd_toStartOf="@+id/cancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/t_back_square_btn_orange"
        android:fontFamily="@font/montserrat_bold"
        android:paddingHorizontal="@dimen/_20dp"
        android:paddingTop="@dimen/_10dp"
        android:paddingBottom="@dimen/_10dp"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ok"
        app:layout_constraintTop_toTopOf="@+id/ok" />

</androidx.constraintlayout.widget.ConstraintLayout>