<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">
    
    <ImageView
        android:id="@+id/ivAddMoney"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_wallet_add_money"
        android:padding="12dp"
        app:tint="@color/colorWhite"
        android:onClick="walletMenu"
        android:background="@drawable/bg_wallet_add_money"
        app:layout_constraintStart_toStartOf="@id/tvAddMoney"
        app:layout_constraintEnd_toEndOf="@id/tvAddMoney"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAddMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_add_money"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="14sp"
        android:textColor="@color/colorBlack"
        app:layout_constraintTop_toBottomOf="@id/ivAddMoney"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/ivSendMoney"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_wallet_send_money"
        android:padding="12dp"
        android:onClick="walletMenu"
        app:tint="@color/colorWhite"
        android:background="@drawable/bg_wallet_add_money"
        app:layout_constraintStart_toEndOf="@id/ivAddMoney"
        app:layout_constraintEnd_toStartOf="@id/ivWithdraw"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSendMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_send_money"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="14sp"
        android:textColor="@color/colorBlack"
        app:layout_constraintTop_toBottomOf="@id/ivSendMoney"
        app:layout_constraintStart_toStartOf="@id/ivSendMoney"
        app:layout_constraintEnd_toEndOf="@id/ivSendMoney"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/ivWithdraw"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_wallet_withdraw"
        android:padding="12dp"
        android:onClick="walletMenu"
        app:tint="@color/colorWhite"
        android:background="@drawable/bg_wallet_add_money"
        app:layout_constraintStart_toStartOf="@id/tvWithdraw"
        app:layout_constraintEnd_toEndOf="@id/tvWithdraw"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvWithdraw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdraw"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="14sp"
        android:textColor="@color/colorBlack"
        app:layout_constraintTop_toBottomOf="@id/ivWithdraw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>